[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cli-help-maker"
authors = [
    {name = "Agustín Piqueres", email = "agustin.piqueres@gmail.com"}
]
dependencies = [
    "lorem-text==2.1"
]

license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
    "pytest==7.2.0",
    "pytest-cov==4.0.0"
]
dev = [
    "black",
    "mypy",
    "isort"
]

# [project.scripts]
# prog_name = "module:function"

[project.urls]
#Documentation = "https://flit.pypa.io"
#Changelog = "https://flit.pypa.io/en/stable/history.html"
Source = "https://github.com/plaguss/cli-help-maker"
